--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,6 +24,16 @@ a {
   box-sizing: border-box;
 }
 
+h1 {
+  padding: 0;
+  margin: 0;
+}
+
+h2 {
+  padding: 0;
+  margin: 0;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
