--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,19 @@ h2 {
   margin: 0;
 }
 
+.spinner {
+  animation: spin infinite 1s linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
